deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-api-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: heart-api

  template:
    metadata:
      labels:
        app: heart-api

    spec:
      containers:
      - name: heart-api
        image: heart-api:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
