service.yaml
apiVersion: v1
kind: Service

metadata:
  name: heart-api-service

spec:
  selector:
    app: heart-api

  type: NodePort

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
